--- a/assets/style.css
+++ b/assets/style.css
@@ -3,6 +3,7 @@ body {
     padding:0;
 }
 
+/* Begin Header Content */
 body>header {
     position: absolute;
     width:100%;
@@ -11,23 +12,42 @@ body>header {
     background-color: #B000B0;
     display:flex;
     align-items:center;
+    justify-content:space-between;
 }
-
+body>header>div {
+    display:flex;
+    align-items:center;
+}
 header img {
     max-height:100px;
 }
-
 header ul {
     list-style:none;
     text-align:right;
+    margin-right:15px;
+    padding-left:0;
 }
-
 header li {
-    display:inline;
+    display:inline-block;
+    margin-left:15px;
+}
+h1 {
+    padding: 20px 0 20px 20px;
+    display:inline-block;
 }
 
-h1 {
-    padding: 20px;
+
+a {
+    color:inherit;
+    text-decoration:none;
+}
+
+main h2 {
+    width: 150px;
+    border-right:10px solid black;
+    text-align:right;
+    padding-right:10px;
+    box-sizing:border-box;
 }
 
 main {
@@ -36,17 +56,29 @@ main {
 
 main section {
     margin:0 30px;
+    display:flex;
+}
+
+h2 {
+    margin:30px;
 }
 
 #projects {
     display:flex;
     flex-wrap: wrap;
-    justify-content: space-around;
+    background-color:salmon;
+}
+#projects>div {
+    display:flex;
+    flex:1 1 700px;
+    background-color:chartreuse;
+    justify-content:space-around;
+    flex-wrap: wrap;
 }
 
 .card {
     flex:0 0 200px;
-    margin:30px;
+    margin:10px;
 }
 
 .card span {
@@ -60,26 +92,48 @@ main section {
     flex-wrap:wrap;
     justify-content:flex-end;
     align-items:flex-end;
+    transition: transform 0.5s;
+}
+.card figure:hover {
+    filter:brightness(200%);
+    transform:scale(105%);
 }
 
 .card img {
     width:100%;
     min-width:350px;
     max-width: 700px;
+    border:5px solid blueviolet;
 }
 
 #projects .card:first-of-type {
     width:100%;
+    max-width:700px;
     flex:none;
     margin:0;
+    padding:0 100%;
+}
+
+#projects .card:first-of-type figure {
+    margin-top:30px;
 }
 
 .card figurecaption {
     display:block;
     position:relative;
-    bottom:50px;
+    bottom:60px;
     height:50px;
     width:150px;
+    padding:5px;
     font-size:20px;
     background-color:blueviolet;
+}
+
+@media screen and (max-width:992px) {
+    main h2 {
+        border-right:none;
+        border-bottom:10px solid black;
+        text-align: center;
+        width:100%;
+    }
 }
