--- a/assets/style.css
+++ b/assets/style.css
@@ -1,6 +1,14 @@
+:root {
+    --primary-foreground:black;
+    --secondary-foreground:white;
+    --primary-background:#B000B0;
+    --secondary-background:lightblue;
+}
+
 body {
     margin:0;
     padding:0;
+    background-color:gray;
 }
 
 /* Begin Header Content */
@@ -35,6 +43,7 @@ h1 {
     padding: 20px 0 20px 20px;
     display:inline-block;
 }
+/* End Header Content */
 
 
 a {
@@ -43,10 +52,12 @@ a {
 }
 
 main h2 {
-    width: 150px;
     border-right:10px solid black;
     text-align:right;
-    padding-right:10px;
+    flex:1 1 250px;
+    margin:30px;
+    padding:50px 40px 0 40px;
+    font-size:80px;
     box-sizing:border-box;
 }
 
@@ -59,26 +70,30 @@ main section {
     display:flex;
 }
 
-h2 {
-    margin:30px;
-}
-
-#projects {
+main>section {
     display:flex;
     flex-wrap: wrap;
-    background-color:salmon;
 }
-#projects>div {
+main>section>div {
     display:flex;
-    flex:1 1 700px;
-    background-color:chartreuse;
+    flex:3 3 700px;
     justify-content:space-around;
     flex-wrap: wrap;
 }
 
+#about p {
+    margin-top:30px;
+    font-size:20px;
+    line-height: 140%;
+}
+
+#about p:last-of-type {
+    padding-bottom:20px;
+}
+
 .card {
-    flex:0 0 200px;
-    margin:10px;
+    width:39%;
+    margin:1%;
 }
 
 .card span {
@@ -90,28 +105,28 @@ h2 {
     margin:0;
     display:flex;
     flex-wrap:wrap;
+    position:relative;
     justify-content:flex-end;
     align-items:flex-end;
     transition: transform 0.5s;
 }
-.card figure:hover {
+.hovereffect:hover {
     filter:brightness(200%);
     transform:scale(105%);
 }
 
 .card img {
     width:100%;
-    min-width:350px;
-    max-width: 700px;
     border:5px solid blueviolet;
 }
 
+#projects>div {
+    justify-content:center;
+}
+
 #projects .card:first-of-type {
-    width:100%;
-    max-width:700px;
+    width:80%;
     flex:none;
-    margin:0;
-    padding:0 100%;
 }
 
 #projects .card:first-of-type figure {
@@ -120,8 +135,7 @@ h2 {
 
 .card figurecaption {
     display:block;
-    position:relative;
-    bottom:60px;
+    position:absolute;
     height:50px;
     width:150px;
     padding:5px;
@@ -129,11 +143,72 @@ h2 {
     background-color:blueviolet;
 }
 
-@media screen and (max-width:992px) {
+#contact form {
+    display:flex;
+    flex-direction:column;
+    justify-content: center;   
+}
+
+#contact>div>* {
+    margin-top:30px;
+    padding:20px;
+    border:10px solid purple;
+    border-radius:20px;
+}
+
+#contact a {
+    border:2px dotted black;
+    color:blue;
+}
+
+#message-input {
+    resize:none;
+    width:300px;
+    height:100px;
+}
+#name-input {
+    width:150px;
+}
+#contact input[type="button"] {
+    width:100px;
+    align-self:center;
+}
+
+@media screen and (max-width:1296px) {
     main h2 {
         border-right:none;
         border-bottom:10px solid black;
         text-align: center;
+        padding:0 40px;
+        margin:0;
         width:100%;
+        flex:none;
     }
 }
+
+@media screen and (max-width:768px) {
+    body>header {
+        height:200px;
+        flex-direction:column;
+        justify-content: space-around;
+    }
+    main {
+        margin-top:200px;
+    }
+    header ul {
+        text-align: center;
+        margin:0 10px;
+    }
+    .card {
+        width:80%;
+    }
+}
+
+/* TODO:
+style nav links, general fonts/colors everywhere
+Comment stuff better
+actual images/links
+footer content
+README
+refactor css
+*/
