--- a/assets/style.css
+++ b/assets/style.css
@@ -1,14 +1,14 @@
 :root {
-    --primary-foreground:black;
-    --secondary-foreground:white;
-    --primary-background:#B000B0;
-    --secondary-background:lightblue;
+    --primary-foreground:white;
+    --primary-background:black;
+    --secondary-foreground:orange;
+    --secondary-background:darkblue;
 }
 
 body {
     margin:0;
     padding:0;
-    background-color:gray;
+    background-color:var(--secondary-background);
 }
 
 /* Begin Header Content */
@@ -17,10 +17,11 @@ body>header {
     width:100%;
     height:100px;
     top:0;
-    background-color: #B000B0;
+    background-color:var(--primary-background);
     display:flex;
     align-items:center;
     justify-content:space-between;
+    color:var(--primary-foreground);
 }
 body>header>div {
     display:flex;
@@ -36,23 +37,33 @@ header ul {
     padding-left:0;
 }
 header li {
+    /* style each nav link */
+    font-size:200%;
+    border-left:5px solid var(--primary-foreground);
+    border-bottom:5px solid var(--primary-foreground);
     display:inline-block;
     margin-left:15px;
+    padding:5px;
+}
+header a {
+    color:inherit;
 }
 h1 {
+    font-size:50px;
     padding: 20px 0 20px 20px;
     display:inline-block;
 }
-/* End Header Content */
 
 
 a {
-    color:inherit;
     text-decoration:none;
 }
 
+/* Overarching rules applied to main contect section */
 main h2 {
-    border-right:10px solid black;
+    /* each section's label h2 gets spaced where it needs to be and draws a line to its right */
+    color:var(--secondary-foreground);
+    border-right:10px solid var(--secondary-foreground);
     text-align:right;
     flex:1 1 250px;
     margin:30px;
@@ -60,16 +71,13 @@ main h2 {
     font-size:80px;
     box-sizing:border-box;
 }
-
 main {
     margin-top:100px;
 }
-
 main section {
     margin:0 30px;
     display:flex;
 }
-
 main>section {
     display:flex;
     flex-wrap: wrap;
@@ -81,26 +89,27 @@ main>section>div {
     flex-wrap: wrap;
 }
 
+/* Specific rules to about section */
 #about p {
     margin-top:30px;
     font-size:20px;
     line-height: 140%;
+    color:var(--secondary-foreground);
 }
-
 #about p:last-of-type {
     padding-bottom:20px;
 }
 
+/* Behavior of link cards in project section */
 .card {
     width:39%;
     margin:1%;
 }
-
 .card span {
     font-size: 70%;
 }
-
 .card figure {
+    /* Image + label section get alignment and wrap behavior */
     width:100%;
     margin:0;
     display:flex;
@@ -108,59 +117,66 @@ main>section>div {
     position:relative;
     justify-content:flex-end;
     align-items:flex-end;
-    transition: transform 0.5s;
 }
-.hovereffect:hover {
-    filter:brightness(200%);
-    transform:scale(105%);
-}
-
 .card img {
     width:100%;
-    border:5px solid blueviolet;
+    border:5px solid var(--primary-background);
 }
-
 #projects>div {
     justify-content:center;
 }
-
 #projects .card:first-of-type {
     width:80%;
     flex:none;
 }
-
 #projects .card:first-of-type figure {
     margin-top:30px;
 }
-
 .card figurecaption {
+    /* Bring label of each card into bottom-right corner of image */
     display:block;
     position:absolute;
     height:50px;
     width:150px;
     padding:5px;
     font-size:20px;
-    background-color:blueviolet;
+    background-color:var(--primary-background);
+    color:var(--primary-foreground);
 }
 
+/* Hoverable items get effects */
+.hovereffect {
+    transition: transform 0.5s;
+}
+.hovereffect:hover {
+    filter:brightness(200%);
+    transform:scale(105%);
+    box-shadow: 0 0 20px 20px var(--secondary-foreground);
+}
+
+/* Reach me section specific rules */
 #contact form {
     display:flex;
     flex-direction:column;
     justify-content: center;   
 }
-
 #contact>div>* {
-    margin-top:30px;
+    /* all direct children of formatting div in contact section get rules: currently this applies rules to each of the info section and the input form */
+    margin:30px 15px 0 15px;
     padding:20px;
-    border:10px solid purple;
+    border:10px solid var(--secondary-foreground);
     border-radius:20px;
+    font-size: 150%;
+    background-color:var(--secondary-foreground);
+    color:var(--secondary-background);
 }
-
+#contact>div:last-child {
+    /* spacing from bottom of page, only applied to last child so when vertically stacked the space between them is consistent */
+    margin-bottom:30px;
+}
 #contact a {
     border:2px dotted black;
-    color:blue;
 }
-
 #message-input {
     resize:none;
     width:300px;
@@ -170,14 +186,16 @@ main>section>div {
     width:150px;
 }
 #contact input[type="button"] {
+    margin-top:10px;
     width:100px;
     align-self:center;
 }
 
+/* first break point, h2s stack on top of content */
 @media screen and (max-width:1296px) {
     main h2 {
         border-right:none;
-        border-bottom:10px solid black;
+        border-bottom:10px solid var(--secondary-foreground);
         text-align: center;
         padding:0 40px;
         margin:0;
@@ -186,14 +204,15 @@ main>section>div {
     }
 }
 
-@media screen and (max-width:768px) {
+/* last break point, nav links go below name and cards become vertical */ 
+@media screen and (max-width:830px) {
     body>header {
-        height:200px;
+        height:280px;
         flex-direction:column;
         justify-content: space-around;
     }
     main {
-        margin-top:200px;
+        margin-top:280px;
     }
     header ul {
         text-align: center;
@@ -205,10 +224,5 @@ main>section>div {
 }
 
 /* TODO:
-style nav links, general fonts/colors everywhere
-Comment stuff better
-actual images/links
-footer content
 README
-refactor css
 */
